change jvmoptions